--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Secure DevOps Frontend</title>
+  <title>Secure DevOps Frontend New</title>
 </head>
 <body>
   <div id="root"></div>
